--- a/_posts/2014-07-17-project-2.markdown
+++ b/_posts/2014-07-17-project-2.markdown
@@ -1,15 +1,15 @@
 ---
-title: Escape
-subtitle: Website Design
+title: Classes
+subtitle: in-progress...
 layout: default
 modal-id: 2
 date: 2014-07-17
-img: escape.png
-thumbnail: escape-thumbnail.png
+img: classes.jpg
+thumbnail: classes-thumbnail.jpg
 alt: image-alt
 project-date: April 2014
 client: Start Bootstrap
 category: Web Development
-description: Lorem ipsum dolor sit amet, usu cu alterum nominavi lobortis. At duo novum diceret. Tantas apeirian vix et, usu sanctus postulant inciderint ut, populo diceret necessitatibus in vim. Cu eum dicam feugiat noluisse.
+description: Spiritual discourses followed by an ecstatic kirtan and vegetarian feast, as well as online classes on spiritual topics based on the ancient spiritual text, Bhagavad Gita As It Is.
 
 ---
